assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Red+Hat+Display:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

/*------------------------------------------------------------------------------
General*/

* {
  margin: 0;
  padding: 0;
  border: 0;
}

body {
  color: #16A5B9;
  font-family: "Red hat display", sans-serif;
  background-color: #fafafa;
  letter-spacing: 2px;
}

p {
  color: black;
}


/*--------------------------------------------------Nav*/

.nav-item {
  padding-top: 10px;
  margin-left: 0px;
  padding-bottom: 10px;
  text-decoration: none;
}

#nav-logo {
  padding-left: 110px;
}

.links {
  text-decoration: none;
  font-family: inherit;
  color: inherit;
  list-style: none;
  font-size: 18px;
}

#menu-button {
  text-align: center;
  color: #16A5B9;
  font-size: 30px;
}

#logo a {
  text-decoration: none;
}

#login a {
  text-decoration: none;
}

#login {
  float: right;
  font-size: 10px;
  color: inherit;
  padding-top: 30px;
}

#nav-logo a:hover {
  color: orange;
}

#login a:hover {
  color: orange;
}

.links-hover a {
  text-decoration: none;
}

.links-hover a:hover {
  color: orange;
}


/*------------------------------Mobile Nav Bar*/

@media screen and (max-width: 1000px) {
  #login {
    display: none;
  }
}

@media only screen and (max-width: 600px) {
  #nav-logo {
    float: right;
    margin: 0;
    padding-top: 10px;
    padding-left: 0;
  }
}


/*------------------------------Prevents menu from closing instantly*/

.navbar-collapse.collapse.in {
  display: block!important;
}


/*--------------------------------------------------------------------------------------------------------------------------Index*/


/*--------------------------------------------------Hero image*/

#hero-section {
  overflow: hidden;
}

#hero {
  width: 100%;
  height: 800px;
  background: linear-gradient(180deg, rgba(14, 13, 13, 0.76) 0%, rgba(49, 41, 41, 0.67) 99.99%, rgba(255, 255, 255, 0) 100%), url(../images/hero-image.jpg)no-repeat center center;
  animation-name: hero-zoom;
  animation-duration: 5s;
  animation-fill-mode: forwards;
}

#cover {
  position: absolute;
  text-align: center;
  top: 35%;
  width: 100%;
}

#cover h1 {
  color: #16A5B9;
  font-size: 100px;
}

#cover h2 {
  color: #fafafa;
  font-size: 50px;
}

#cover h3 {
  color: #fafafa;
}

@keyframes hero-zoom {
  from {
    transform: scale(1);
  }

  to {
    transform: scale(1.1);
  }
}

@media only screen and (max-width: 800px) {
  #cover {
    padding-right: 20px;
    top: 10%;
  }
}


/*--------------------------------------------------What we offer you*/

.offer-you h1 {
  padding-top: 100px;
  padding-bottom: 30px;
}

.offer-you p {
  padding-top: 0px;
  font-size: 100%;
  margin-bottom: 100px;
}

/*--------------------------------------------------App*/

.app {
  padding-top: 50px;
  text-align: center;
  padding-bottom: 50px;
}

.app li {
  list-style: none;
  color: black;
  padding-top: 20px;
}

@media screen and (max-width: 600px) {
  .app h1 {
    padding-top: 20px;
  }
}

/*--------------------------------------------------Youtube*/

.youtube {
  width: 100%;
  height: 500px;
  padding-bottom: 30px;
}
/*--------------------------------------------------Our Team*/

.team-card {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  max-width: 90%;
  max-height: 100%;
  margin: auto;
  margin-top: 20px;
  text-align: center;
}

.team-card img {
  height: 100%;
  width: 100%;
}

.title {
  color: #16A5B9;
  font-size: 100%;
}

.team-card p {
  font-size: 100%;
}

.team-card button {
  border: none;
  outline: 0;
  display: inline-block;
  padding: 8px;
  color: white;
  background-color: #16A5B9;
  text-align: center;
  cursor: pointer;
  width: 100%;
  font-size: 100%;
}

.team-card button:hover,
a:hover {
  opacity: 0.7;
  color: orange;
}

.team-card a {
  float: left;
  font-size: 100%;
  color: #16A5B9;
}

.padding-0 {
  padding-right: 0;
  padding-left: 0;
}


/*--------------------------------------------------Memberships*/

#membership {
  padding-top: 40px;
}

#membership .card {
  border: none;
  background: #e5e5e5;
}

h5 {
  text-align: center;
  padding-bottom: 30px;
}

.image-flip:hover .backside,
.image-flip.hover .backside {
  -webkit-transform: rotateY(0deg);
  -moz-transform: rotateY(0deg);
  -o-transform: rotateY(0deg);
  -ms-transform: rotateY(0deg);
  transform: rotateY(0deg);
  border-radius: .25rem;
}

.image-flip:hover .frontside,
.image-flip.hover .frontside {
  -webkit-transform: rotateY(180deg);
  -moz-transform: rotateY(180deg);
  -o-transform: rotateY(180deg);
  transform: rotateY(180deg);
}

.mainflip {
  -webkit-transition: 1s;
  -webkit-transform-style: preserve-3d;
  -ms-transition: 1s;
  -moz-transition: 1s;
  -moz-transform: perspective(1000px);
  -moz-transform-style: preserve-3d;
  -ms-transform-style: preserve-3d;
  transition: 1s;
  transform-style: preserve-3d;
  position: relative;
}

.frontside {
  position: relative;
  -webkit-transform: rotateY(0deg);
  -ms-transform: rotateY(0deg);
  z-index: 2;
  margin-bottom: 30px;
}

.backside {
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transform: rotateY(-180deg);
  -moz-transform: rotateY(-180deg);
  -o-transform: rotateY(-180deg);
  -ms-transform: rotateY(-180deg);
  transform: rotateY(-180deg);
  -webkit-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
  -moz-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
  box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
}
/* ... */

